<resources>
    <string name="app_name">NavigationDrawerPractica</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_pdf">ActivityPdf</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="su_pedido_se_ha_realizado_exitosamente">Su pedido se ha realizado exitosamente</string>
    <string name="button_close">Button close</string>
    <string name="comedor">Comedor</string>
    <string name="universitario">Universitario</string>
    <string name="unicen">Unicen</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="alumno">Alumno</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="antiguedad">Antiguedad</string>
    <string name="repetir_password">Repetir Contraseña</string>
    <string name="vegetariano">Vegetariano</string>
    <string name="celiac">Celiaco</string>
    <string name="ninguna">Ninguna</string>
    <string name="ticket">TICKET</string>
    <string name="client">Cliente</string>
    <string name="total">Total</string>
    <string name="download">DESCARGAR</string>
    <string name="product_name">Milanesas con Papas Fritas</string>
    <string name="product">Producto</string>
    <string name="product_amount">x2</string>
    <string name="amount">Cantidad</string>
    <string name="price">100$</string>
    <string name="user_name">Lautaro Osinaga</string>
    <string name="choose_your_category">Seleccione su categoria</string>
    <string name="student">Alumno</string>
    <string name="teacher">Docente</string>
    <string name="no_teacher">No Docente</string>
    <string name="external">Externo</string>
    <string name="comedor_universitario">Comedor Universitario</string>
    <string name="password">Contraseña</string>
    <string name="sign_in">Ingresar</string>
    <string name="sign_up">Registrarme</string>
    <string name="product_description">Descripcion del producto</string>
    <string name="product_units">2 Unidades</string>
    <string name="order_number">#100000</string>
    <string name="attribute">Atributo</string>

    <!-- Strings used in myAccount -->
    <string name="user_dni">41854410</string>
    <string name="user_lastname">Osinaga</string>
    <string name="user_category">Vegetariano</string>
    <string name="user_condition">Condicion Alimenticia</string>
    <string name="mis_datos">Mis Datos</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="dni">DNI</string>
    <string name="category">Categoria</string>
    <string name="change_password">Cambiar Contraseña</string>
    <string name="load_balance">Cargar Saldo</string>
    <string name="amount_">Importe</string>
    <string name="transfer_money">Transferir Saldo</string>
    <string name="user_receiver">Destinatario</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="in_progress">In Progress..</string>
    <string name="ver_carrito">Ver Carrito</string>
    <string name="precio">Precio</string>
    <string name="lautaro">Lautaro</string>
    <string name="ver_detalle">Ver detalle</string>
    <string name="dayle_menu">Menu del Dia</string>
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="contrase_a_nueva">Contraseña Nueva</string>
    <string name="cambiar_contrase_a">Cambiar Contraseña</string>
    <string name="condicion_alimenticia">Condicion Alimenticia</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="recuerdame">Recuerdame</string>
    <string name="alimento">Alimento</string>
    <string name="realizar_orden">Realizar orden</string>
    <string name="agregar_al_carrito">Agregar al carrito</string>
    <string name="agregar_productos">Agregar Productos</string>
    <string name="tiempo_de_espera_aprox">Tiempo de Espera aprox</string>
    <string name="proximos_pedidos_en_el_comedor">Proximos pedidos en el Comedor</string>
    <string name="vegano">Vegano</string>


</resources>
