<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".myAccount.Activity_change_password">

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/ic_close" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contrase_a_actual"
            android:textSize="20sp"
            android:textColor="#fff"/>

        <EditText
            android:id="@+id/old_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/ic_custom_input"
            android:drawableStart="@drawable/custom_lock_icon"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="#000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contrase_a_nueva"
            android:textSize="20sp"
            android:textColor="#fff"/>

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/ic_custom_input"
            android:drawableStart="@drawable/custom_lock_icon"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="#000" />



        <EditText
            android:id="@+id/new_password2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/ic_custom_input"
            android:drawableStart="@drawable/custom_lock_icon"
            android:hint="@string/repetir_password"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="#000" />


        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:text="@string/cambiar_contrase_a"
            android:theme="@style/button"
            android:background="@drawable/button"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="5dp" />

    </LinearLayout>



</LinearLayout>