<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:stretchColumns="1"
            android:layout_marginStart="25dp"
            android:layout_marginEnd ="25dp">

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="145dp"
                android:layout_height="114dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:src="@drawable/profile_user" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/user_name" />

            <TextView
                android:id="@+id/user_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#000"
                android:text="@string/price" />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textAlignment="center"
                android:text="@string/load_balance"
                android:textStyle="bold"
                android:textColor="#000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:text="@string/amount_" />

            <EditText
                android:id="@+id/load_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:drawableStart="@drawable/custom_money_icon" />

            <Button
                android:id="@+id/btn_load_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:backgroundTint="#105661"
                android:text="@string/load_balance"
                android:textColor="#fff" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textAlignment="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:text="@string/transfer_money"
                android:textStyle="bold"
                android:textColor="#000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:text="@string/user_receiver" />

            <EditText
                android:id="@+id/trasnfer_dni"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:ems="10"
                android:inputType="number"
                android:drawableStart="@drawable/custom_dni_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:text="@string/amount_" />

            <EditText
                android:id="@+id/transfer_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/custom_money_icon"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/btn_transfer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#105661"
                android:text="@string/transfer_money"
                android:textColor="#fff"
                android:layout_marginBottom="100dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>