<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.Sign_up"
    android:background="#105661">

    <ImageButton
        android:id="@+id/choose_category_button_close"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/ic_arrow_back"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/choose_category_label_choose_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="48dp"
        android:text="@string/choose_your_category"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textColorHighlight="#fff"
        android:textColorHint="#fff"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_category_label_choose_category"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/choose_category_button_student"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:text="@string/student"
            android:textColor="#FFF"
            android:textColorHighlight="#fff"
            android:textColorHint="#fff"
            android:theme="@style/button"
            app:layout_constraintTop_toBottomOf="@+id/textView21"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="148dp" />

        <Button
            android:id="@+id/choose_category_button_teacher"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:text="@string/teacher"
            android:textColor="#FFF"
            android:textColorHighlight="#fff"
            android:textColorHint="#fff"
            android:theme="@style/button"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="148dp" />

        <Button
            android:id="@+id/choose_category_button_no_teacher"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:text="@string/no_teacher"
            android:textColor="#FFF"
            android:textColorHighlight="#fff"
            android:textColorHint="#fff"
            android:theme="@style/button"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="148dp" />

        <Button
            android:id="@+id/choose_category_button_external"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:text="@string/external"
            android:textColor="#FFF"
            android:textColorHighlight="#fff"
            android:textColorHint="#fff"
            android:theme="@style/button"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="148dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>