<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="61dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_close" />
        <TextView

            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Mi Pedido" />

        <TextView
            android:id="@+id/carrito_total_price"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_marginBottom="100dp"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rectangule"
        android:padding="5dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_add_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/agregar_productos" />

        <Button
            android:id="@+id/btn_finish_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/realizar_orden" />

    </LinearLayout>




</RelativeLayout>