<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    tools:context=".food.FoodDetail">

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_arrow_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/alimento"
            android:textSize="24sp"
            android:textStyle="bold" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/product_img"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginStart="125dp"
                android:layout_marginBottom="0dp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"

                android:layout_toEndOf="@+id/product_img"
                android:text="@string/amount"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/product_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="18dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="45dp"
                android:layout_toEndOf="@+id/product_img"
                android:ems="10"
                android:inputType="number"
                android:text="1"
                android:textAlignment="center" />


            <ImageButton
                android:id="@+id/btn_add"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="11dp"
                android:background="@drawable/add" />

            <ImageButton
                android:id="@+id/btn_less"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_below="@+id/btn_add"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="88dp"
                android:layout_marginEnd="11dp"
                android:background="@drawable/less" />

            <CheckBox
                android:id="@+id/cb_toHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="To Home" />

        </RelativeLayout>

        <TextView
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:gravity="center"
            android:text="@string/price"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:gravity="center"
            android:text="@string/price"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp"
            >

            <Button
                android:id="@+id/btn_add_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#105661"
                android:text="@string/realizar_orden"
                android:textColor="#fff"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_add_products"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#105661"
                android:text="@string/agregar_al_carrito"
                android:textColor="#fff"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>




</LinearLayout>